@@ -434,6 +434,7 @@ ifndef::doctype-manpage[]
 {doctitle#}<tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt><br>
 {doctitle#}version {revnumber}{date?,}
 {doctitle#}{date}
+{doctitle#}<br>{revremark}
 {doctitle#}</p>
 
 endif::doctype-manpage[]
