@@ -526,8 +526,9 @@ ifndef::doctype-manpage[]
 <h1>{doctitle}</h1>
 {doctitle#}<span id="author">{author}</span><br />
 {doctitle#}<span id="email"><tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt></span><br />
-{doctitle#}<span id="revision">version {revnumber}{date?,}</span>
-{doctitle#}{date}
+{doctitle#}<span id="revnumber">version {revnumber}{date?,}</span>
+{doctitle#}<span id="revdate">{date}</span>
+{doctitle#}<br /><span id="revremark">{revremark}</span>
 ifdef::toc[]
 <div id="toc">
   <div id="toctitle">{toc_title}</div>
